Fix SonarCloud Quality Gate issues
- Replace generic RuntimeException with custom UtilsException
- Fix InterruptedException handling in catch block (re-interrupt or rethrow)
- Replace System.err.println with printStackTrace() for better error handling
- Replace Stream.collect(Collectors.toList()) with Stream.toList() (Java 16+)
- Replace Thread.sleep() in tests with TimeUnit.MILLISECONDS.sleep()
- Reduce test sleep times from 100ms/50ms to 10ms for faster execution

These changes address:
- 1 BUG (InterruptedException handling)
- 25+ CODE_SMELLS (System.out usage, generic exceptions, test improvements)
- Reliability rating should improve from C to A/B